fix: fix alignment of occupational wellness

--- a/css/style.css
+++ b/css/style.css
@@ -675,7 +675,7 @@
     flex-direction: row;
     height: 44px;
     justify-content: flex-end;
-    left: 444px;
+    left: 446px;
     min-width: 276px;
     padding: 0 14px;
     position: absolute;
